fix overflow issue with table header

--- a/airbyte-webapp/src/components/connection/CatalogTree/next/StreamDetailsPanel/StreamFieldsTable/StreamFieldsTable.module.scss
+++ b/airbyte-webapp/src/components/connection/CatalogTree/next/StreamDetailsPanel/StreamFieldsTable/StreamFieldsTable.module.scss
@@ -86,8 +86,3 @@ $cell-left-padding: variables.$spacing-xl + variables.$spacing-sm;
   overflow: unset;
   padding-left: 0;
 }
-
-// need to fix styled-component z-index issue
-.checkbox {
-  position: unset !important;
-}
